Refine header layout and responsiveness

--- a/style.html
+++ b/style.html
@@ -278,29 +278,54 @@
         /* Header */
         .header {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 0;
-            margin-bottom: 20px;
-            border-bottom: 1px solid color-mix(in srgb, var(--dark-color) 8%, transparent);
-            flex-wrap: wrap;
-            gap: 16px;
-            position: relative;
+            flex-direction: column;
+            gap: 12px;
+            padding: 10px 0 12px;
+            margin-bottom: 16px;
+            position: sticky;
+            top: 0;
             z-index: var(--z-header);
+            background: color-mix(in srgb, white 90%, rgba(255, 255, 255, 0.5));
+            backdrop-filter: blur(10px);
+            box-shadow: 0 1px 0 rgba(0,0,0,0.04), 0 12px 28px rgba(15, 23, 42, 0.06);
+        }
+        .header-top {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 12px;
+            min-height: 56px;
+        }
+        .header-left {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            min-width: 0;
+        }
+        .header-center {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            min-width: 0;
+        }
+        .header-right {
+            display: flex;
+            justify-content: flex-end;
+            min-width: 0;
         }
         .sidebar-toggle {
             display: none;
             align-items: center;
             justify-content: center;
-            width: 42px;
-            height: 42px;
-            border-radius: 10px;
-            border: 1px solid color-mix(in srgb, var(--dark-color) 12%, transparent);
-            background: white;
+            width: 40px;
+            height: 40px;
+            border-radius: 12px;
+            border: 1px solid color-mix(in srgb, var(--dark-color) 14%, transparent);
+            background: color-mix(in srgb, white 90%, rgba(255,255,255,0.2));
             color: var(--dark-color);
             cursor: pointer;
             box-shadow: 0 6px 16px rgba(15, 23, 42, 0.08);
-            transition: all 0.2s ease;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
         .sidebar-toggle:hover {
             transform: translateY(-1px);
@@ -309,44 +334,52 @@
         .sidebar-toggle i {
             font-size: 1.1rem;
         }
-        .header-title h1 {
-            font-size: 1.8rem;
+        .header-brand {
+            display: inline-flex;
+            align-items: center;
+            padding: 8px 12px;
+            border-radius: 12px;
+            background: color-mix(in srgb, var(--primary-color) 8%, white 92%);
+            border: 1px solid color-mix(in srgb, var(--primary-color) 18%, transparent);
+            box-shadow: 0 8px 22px rgba(15, 23, 42, 0.08);
+        }
+        .header-brand .brand-text {
+            font-size: 1.2rem;
+            font-weight: 500;
+            letter-spacing: 0.03em;
             color: var(--dark-color);
         }
-        .header-actions {
+        .context-pill {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 10px 16px;
+            border-radius: 999px;
+            background: color-mix(in srgb, var(--primary-color) 6%, white 94%);
+            border: 1px solid color-mix(in srgb, var(--primary-color) 16%, transparent);
+            box-shadow: 0 8px 20px rgba(15, 23, 42, 0.07);
+            color: var(--dark-color);
+            min-width: 0;
+            max-width: 100%;
+        }
+        .context-primary {
+            font-weight: 500;
+            font-size: 0.95rem;
+            color: color-mix(in srgb, var(--dark-color) 90%, var(--primary-dark) 10%);
+            white-space: nowrap;
+        }
+        .context-secondary {
+            font-weight: 400;
+            font-size: 0.9rem;
+            color: var(--muted-color);
+            white-space: nowrap;
+        }
+        .header-controls {
             display: flex;
             align-items: center;
             gap: 12px;
             flex-wrap: wrap;
-            justify-content: flex-end;
-            flex: 1 1 auto;
-            min-width: 0;
-        }
-        .header-greeting {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            padding: 10px 12px;
-            background: linear-gradient(135deg, color-mix(in srgb, var(--primary-color) 12%, white 88%), white);
-            border: 1px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
-            border-radius: 14px;
-            box-shadow: 0 8px 20px rgba(15, 23, 42, 0.08);
-            color: var(--dark-color);
-            font-weight: 600;
-            min-width: 0;
-        }
-        .greeting-label {
-            color: var(--muted-color);
-            font-weight: 500;
-        }
-        .greeting-name {
-            color: var(--primary-dark);
-            font-size: 1rem;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            max-width: 200px;
-            display: inline-block;
+            justify-content: flex-start;
         }
         .header-selectors {
             display: flex;
@@ -354,7 +387,7 @@
             gap: 10px;
             flex-wrap: wrap;
             flex: 1 1 420px;
-            justify-content: flex-end;
+            justify-content: flex-start;
             min-width: 0;
         }
         .selector-group {
@@ -643,35 +676,39 @@
             opacity: 0;
             pointer-events: none;
         }
-        .header-quick-actions {
-            display: flex;
+        .header-action-cluster {
+            display: inline-flex;
             align-items: center;
             gap: 8px;
-            flex-shrink: 1;
-            flex-wrap: wrap;
-            min-width: 0;
+            padding: 6px 10px;
+            border-radius: 16px;
+            background: color-mix(in srgb, rgba(255,255,255,0.68) 90%, var(--primary-color) 10%);
+            border: 1px solid color-mix(in srgb, var(--primary-color) 16%, transparent);
+            box-shadow: 0 10px 22px rgba(15, 23, 42, 0.1);
         }
-        .notification-bell {
+        .header-icon-button {
             position: relative;
             cursor: pointer;
             font-size: 1rem;
-            color: var(--dark-color);
+            color: color-mix(in srgb, var(--dark-color) 78%, var(--primary-dark) 22%);
             width: 40px;
             height: 40px;
             border-radius: 12px;
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            background: color-mix(in srgb, var(--light-color) 82%, white 18%);
-            border: 1px solid var(--border-color);
-            box-shadow: 0 6px 14px rgba(15, 23, 42, 0.08);
-            transition: transform 0.15s ease, box-shadow 0.15s ease, background-color 0.15s ease;
+            border: none;
+            background: transparent;
+            transition: transform 0.15s ease, box-shadow 0.15s ease, color 0.15s ease;
         }
-        .notification-bell:hover,
-        .notification-bell:focus-visible {
-            background: color-mix(in srgb, var(--primary-color) 10%, var(--light-color) 90%);
+        .notification-bell {
+            border: none;
+        }
+        .header-icon-button:hover,
+        .header-icon-button:focus-visible {
+            color: var(--primary-dark);
+            transform: scale(1.03);
             box-shadow: 0 8px 18px rgba(15, 23, 42, 0.12);
-            transform: translateY(-1px);
             outline: none;
         }
         .notification-badge {
@@ -909,17 +946,9 @@
             cursor: pointer;
             border-radius: 12px;
             padding: 4px;
-            transition: background-color 0.15s ease, box-shadow 0.15s ease, transform 0.15s ease;
-            background: color-mix(in srgb, var(--light-color) 82%, white 18%);
-            border: 1px solid var(--border-color);
-            box-shadow: 0 6px 14px rgba(15, 23, 42, 0.08);
-        }
-        .user-profile:focus-visible,
-        .user-profile:hover {
-            background-color: color-mix(in srgb, var(--primary-color) 10%, var(--light-color) 90%);
-            box-shadow: 0 8px 18px rgba(15, 23, 42, 0.12);
-            transform: translateY(-1px);
-            outline: none;
+            transition: color 0.15s ease, transform 0.15s ease, box-shadow 0.15s ease;
+            background: transparent;
+            border: none;
         }
         .user-avatar {
             width: 32px;
@@ -4554,15 +4583,23 @@
                 width: 100%;
             }
             .header {
-                flex-direction: column;
-                align-items: stretch;
-                gap: 14px;
+                gap: 10px;
+                padding: 8px 0 10px;
+                margin-bottom: 12px;
             }
-            .header-actions {
-                width: 100%;
-                flex-direction: column;
-                align-items: stretch;
-                gap: 12px;
+            .header-top {
+                min-height: 52px;
+            }
+            .header-center {
+                display: none;
+            }
+            .header-action-cluster {
+                padding: 6px 8px;
+                gap: 6px;
+            }
+            .header-icon-button {
+                width: 36px;
+                height: 36px;
             }
             .table-header-controls button {
                 width: 100%;
@@ -4573,11 +4610,9 @@
                 align-items: stretch;
                 gap: 10px;
             }
-            .header-quick-actions {
-                width: 100%;
-                justify-content: flex-end;
-                gap: 10px;
-                order: -1;
+            .header-controls {
+                flex-direction: column;
+                align-items: stretch;
             }
             .selector-group {
                 width: 100%;
@@ -4627,9 +4662,9 @@
                 left: 50%;
                 transform: translateX(-50%);
             }
-            .header-quick-actions {
-                width: 100%;
-                justify-content: flex-end;
+            .action-users,
+            .action-records {
+                display: none;
             }
             .modal {
                 align-items: flex-start;
@@ -4691,13 +4726,9 @@
             .header {
                 align-items: flex-start;
             }
-            .header-actions {
-                gap: 10px;
-            }
-            .header-quick-actions {
-                order: -1;
-                justify-content: flex-end;
-                align-self: flex-end;
+            .header-top,
+            .header-controls {
+                width: 100%;
             }
             .header-selectors {
                 align-items: flex-start;
