--- a/index.html
+++ b/index.html
@@ -77,17 +77,44 @@
         <div class="main-content">
         <!-- Header -->
             <div class="header">
-                <button type="button" class="sidebar-toggle" id="sidebar-toggle" aria-label="Abrir menu de navegação" aria-expanded="false">
-                    <i class="fas fa-bars" aria-hidden="true"></i>
-                </button>
-                <div class="header-title">
-                    <h1>Dashboard</h1>
-                </div>
-                <div class="header-actions">
-                    <div class="header-greeting" id="header-user-greeting" aria-live="polite">
-                        <span class="greeting-label">Olá,</span>
-                        <span class="greeting-name" id="header-user-greeting-name">Usuário</span>
+                <div class="header-top">
+                    <div class="header-left">
+                        <button type="button" class="sidebar-toggle" id="sidebar-toggle" aria-label="Abrir menu de navegação" aria-expanded="false">
+                            <i class="fas fa-bars" aria-hidden="true"></i>
+                        </button>
+                        <div class="header-brand" aria-label="Cosign">
+                            <span class="brand-text">Cosign</span>
+                        </div>
                     </div>
+                    <div class="header-center">
+                        <div class="context-pill" aria-live="polite">
+                            <span class="context-primary" id="header-context-label">Dashboard</span>
+                            <span class="context-secondary" id="header-context-meta">Hoje</span>
+                        </div>
+                    </div>
+                    <div class="header-right">
+                        <div class="header-action-cluster" role="group" aria-label="Ações rápidas">
+                            <button type="button" class="header-icon-button action-users" aria-label="Usuários">
+                                <i class="fas fa-users" aria-hidden="true"></i>
+                            </button>
+                            <button type="button" class="header-icon-button action-records" aria-label="Registros">
+                                <i class="fas fa-clipboard-list" aria-hidden="true"></i>
+                            </button>
+                            <div class="notification-bell header-icon-button" id="notification-bell" aria-label="Notificações" tabindex="0">
+                                <i class="fas fa-bell" aria-hidden="true"></i>
+                                <span class="notification-badge">0</span>
+                            </div>
+                            <div class="user-profile header-icon-button" id="header-user-profile" role="button" tabindex="0" aria-haspopup="dialog" aria-controls="avatar-modal" aria-expanded="false">
+                                <div class="user-avatar" id="header-user-avatar">--</div>
+                                <div class="user-details" aria-hidden="true">
+                                    <strong id="header-user-name">Usuário</strong>
+                                    <span id="header-user-role">Perfil geral</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="header-controls">
                     <div class="header-selectors compact">
                         <div class="selector-group compact">
                             <label for="profile-select" class="sr-only">Perfil</label>
@@ -123,19 +150,6 @@
                             <select id="unit-select" class="selector-input" aria-hidden="true" tabindex="-1">
                                 <option value="todas" data-icon="fas fa-layer-group" data-description="Visualização geral por setor">Todas as unidades</option>
                             </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="header-quick-actions">
-                    <div class="notification-bell" id="notification-bell" aria-label="Notificações" tabindex="0">
-                        <i class="fas fa-bell" aria-hidden="true"></i>
-                        <span class="notification-badge">0</span>
-                    </div>
-                    <div class="user-profile" id="header-user-profile" role="button" tabindex="0" aria-haspopup="dialog" aria-controls="avatar-modal" aria-expanded="false">
-                        <div class="user-avatar" id="header-user-avatar">--</div>
-                        <div class="user-details" aria-hidden="true">
-                            <strong id="header-user-name">Usuário</strong>
-                            <span id="header-user-role">Perfil geral</span>
                         </div>
                     </div>
                 </div>
