--- a/script.html
+++ b/script.html
@@ -21,10 +21,10 @@
                 erro: ''
             };
         }
-        function criarEstadoInicial() {A
+        function criarEstadoInicial() {
             return {
                 perfilAtual: 'geral',
-                unidadeAtual: 'todas',Q
+                unidadeAtual: 'todas',
                 filtrosSelecionados: ['todos'],
                 buscaDashboard: '',
                 paginaAtual: 'dashboard',
