--- a/style.html
+++ b/style.html
@@ -364,12 +364,15 @@
             padding: 0;
         }
         .sidebar-menu a {
-            display: block;
+            display: flex;
+            align-items: center;
+            gap: 12px;
             padding: 12px 20px;
             color: white;
             text-decoration: none;
             transition: all 0.3s;
             border-left: 4px solid transparent;
+            text-align: left;
         }
         .sidebar-menu a:hover {
             background-color: color-mix(in srgb, white 18%, transparent);
@@ -378,6 +381,10 @@
         .sidebar-menu a.active {
             background-color: color-mix(in srgb, white 22%, transparent);
             border-left-color: var(--light-color);
+        }
+        .sidebar-menu span {
+            flex: 1;
+            text-align: left;
         }
         .sidebar-menu i {
             margin-right: 10px;
@@ -389,12 +396,14 @@
             margin-top: auto;
             padding: 20px;
             border-top: 1px solid rgba(255,255,255,0.1);
+            width: 100%;
+            align-self: stretch;
         }
         .sidebar-logout-button {
             width: 100%;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             gap: 10px;
             padding: 12px 16px;
             border-radius: 10px;
@@ -404,6 +413,7 @@
             font-size: 0.95rem;
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.2s ease, border-color 0.3s ease;
+            text-align: left;
         }
         .sidebar-logout-button:hover {
             background: rgba(255,255,255,0.18);
@@ -4503,13 +4513,13 @@
             .sidebar-menu a {
                 display: flex;
                 align-items: center;
-                justify-content: center;
-                gap: 0;
-                text-align: center;
-                padding: 14px 0;
-                font-size: 1rem;
-                line-height: 1.2;
-                border-left: none;
+            justify-content: center;
+            gap: 0;
+            text-align: center;
+            padding: 14px 0;
+            font-size: 1rem;
+            line-height: 1.2;
+            border-left: none;
             }
             .sidebar-menu i {
                 margin-right: 0;
@@ -4529,7 +4539,7 @@
             }
             .sidebar:hover {
                 width: var(--sidebar-width);
-                align-items: flex-start;
+                align-items: stretch;
                 box-shadow: 0 12px 32px rgba(0, 0, 0, 0.22);
             }
             .sidebar:hover .sidebar-header p,
@@ -4549,6 +4559,13 @@
                 gap: 10px;
                 padding: 12px 20px;
                 border-left: 4px solid transparent;
+                text-align: left;
+            }
+            .sidebar:hover .sidebar-logout-button {
+                justify-content: flex-start;
+                gap: 10px;
+                padding: 12px 16px;
+                text-align: left;
             }
             .sidebar:hover .sidebar-menu a.active {
                 background: color-mix(in srgb, white 8%, rgba(0, 0, 0, 0.12));
